# miniinstagram

./: Dockerfile  README.md  dbexport.pgsql  docker-compose.yaml  drools.pgsql  index.html  manage.py  prescription.sql  pyproject.toml  requirements.txt  urls.py  wsgi.py
.github/workflows/: deploy.yml
apimanagement/: apps.py  permissions.py  urls.py
coresingle/: asgi.py  settings.py  urls.py
coresingle/templates/: navbar.html  ngBase.html
env/: django.env  pgadmin.env  postgres.env
instagrammini/: apps.py  models.py  serializers.py  service.py  urls.py  views.py
instagrammini/migrations/: 0001_initial.py
qrcodes/: qrgenerate.py
static_root/: adminUpload.xlsx  studentUpload.xlsx
static_root/js/: app.appointments.js  app.configuration.js  app.dash.js  app.deployment.js  app.home.js  app.inventory.js  app.main.js  app.management.js  app.statistics.js  module.businessManagement.js  module.home.js  module.prescription.js  sudo.manageUsers.js
static_root/ngTemplates/: admin.menu.html  app.ERP.settings.modulesAndApps.item.html  app.HR.form.newUser.html  app.HR.manage.users.html  app.appointment.create.html  app.appointment.edit.html  app.configure.html  app.createAppointment.html  app.createautomatedbill.html  app.employee.create.html  app.employee.edit.html  app.home.calendar.form.reminder.html  app.inventory.addbill.html  app.inventory.addorder.html  app.inventory.addorders.html  app.inventory.itemadd.html  app.inventory.showbill.html  app.inventory.showitems.html  (+22 more)
static_shared/: .~lock.teacherUpload.xlsx#  teacherUpload.xlsx
templates/: ngBase.html
(+37 files in other folders)
